--- a/src/pages/cart.css
+++ b/src/pages/cart.css
@@ -4,39 +4,43 @@
 .my-device {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 4px;
-    margin: 10px;
-  }
-  
-  .col-span-12 {
+    gap: 5px;
+    margin: 10px; 
+    margin-bottom: 20px; /* Add margin-bottom */
+    
+}
+
+.col-span-12 {
     width: 100%;
-  }
-  
-  .md\:col-span-8 {
+}
+
+.md\:col-span-8 {
     grid-column: span 1;
-  }
-  
-  .md\:col-span-4 {
+}
+
+.md\:col-span-4 {
     grid-column: span 1;
-  }
-  
-  @media screen and (max-width: 640px) {
+}
+
+@media screen and (max-width: 640px) {
     /* Styles for smaller screens */
     .my-device {
-      display: flex;
-      flex-direction: column;
+        display: flex;
+        flex-direction: column;
+        
     }
-  
+
     .col-span-12 {
-      width: 100%;
+        width: 100%;
+        margin-bottom: 40px;
     }
-  
+
     .md\:col-span-8 {
-      order: 2; /* Reorder the left side (address) to appear after the right side (cart) */
+        order: 2; /* Reorder the left side (address) to appear after the right side (cart) */
     }
-  
+
     .md\:col-span-4 {
-      order: 1; /* Reorder the right side (cart) to appear before the left side (address) */
+        order: 1; 
+        margin-bottom: 10px;/* Reorder the right side (cart) to appear before the left side (address) */
     }
-  }
-  
+}
