--- a/src/components/shared/Style/style.css
+++ b/src/components/shared/Style/style.css
@@ -28,3 +28,14 @@
     animation: shake 2s infinite;
   }
   
+.arrow{
+  display: flex;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 640px) {
+  .arrow {
+    display: none;
+  }
+
+}
