--- a/src/components/shared/Style/style.css
+++ b/src/components/shared/Style/style.css
@@ -2,9 +2,12 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Akronim&family=Bai+Jamjuree:wght@400;500;600;700&family=Lobster&family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;1,100;1,300&family=Oswald:wght@200;300;400;600;700&family=PT+Sans+Narrow:wght@400;700&family=Phudu:wght@400;500;600&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,900&display=swap');
 
-/* body {
+  .hero-text{
     font-family: 'Lobster', sans-serif;
-  } */
+  }
+
+  
+  
 
 @keyframes shake {
     0% {
@@ -25,7 +28,7 @@
   }
   
   .shake-animation {
-    animation: shake 2s infinite;
+    animation: shake 1s infinite;
   }
   
 .arrow{
@@ -37,5 +40,12 @@
   .arrow {
     display: none;
   }
+  .red-background{
+    height: 200px;
+    padding-left: 300px;
+    position:absolute;
+  }
+
+  
 
 }
