--- a/src/components/shared/styles.css
+++ b/src/components/shared/styles.css
@@ -27,7 +27,6 @@
   
   }
   
-  
   .swiper-slide {
     text-align: center;
     font-size: 18px;
@@ -63,6 +62,15 @@
     .product-title{
       font-size: 14px;
     }
+   .time{
+    font-size: 9px;
+   }
+   .card-height{
+    height: 273px;
+   }
+   .card-image{
+    height: 800px;
+   }
   
   }
 
