modal completed dsadsada

--- a/src/components/shared/Style/style.css
+++ b/src/components/shared/Style/style.css
@@ -5,6 +5,9 @@
   .hero-text{
     font-family: 'Lobster', sans-serif;
   }
+  .welcome-text{
+    font-family: 'Lobster', sans-serif;
+  }
 
 
 @keyframes shake {
